Released version 1.05 with small changes to schema based on db team recommendations
