# server/swagger_server/models/__init__.py
@@ -3,7 +3,6 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.ballot import Ballot
 from swagger_server.models.choice import Choice
 from swagger_server.models.election import Election
 from swagger_server.models.election_results import ElectionResults
